--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,14 @@ logs/
 *.mp4
 *.avi
 *.webm
+# label txt 파일
+*.txt
 # 만약 데이터셋 폴더를 사용한다면
-# dataset/
+# */dataset/
 # data/
+
+# 결과 파일
+*/runs/
 
 # ---------------------------------
 # Python 관련 (Python specific)
@@ -59,3 +64,6 @@ env/
 
 # macOS
 .DS_Store
+
+# 각종 cache 파일
+*.cache
